# smoothSTT

./: .env-sample  .gitignore  AGENTS.md  CHANGELOG.md  README.md  RELEASE_NOTES.md  TODO.md  index.cjs  package-lock.json  package.json  smoothstt-config.json  test-harness.js  test_plan.md
.github/workflows/: dependabot-auto-merge.yml
SmoothSTT/: .gitignore  AGENT.md  CHANGELOG.md  README.md  SKILLS.md  TODO.md  package.json  systemOutline.md  test-harness.js  verification.md
SmoothSTT/lib/: context-bridge.cjs  context-bridge.test.cjs  sound-mixer.node
SmoothSTT/src/: automation.js  main.js
docs/: BUILD.md  LICENSES.md  workflow-validation.md
resources/@vidividivici/context-reader/: index.cjs  package.json  smart-stt.js
resources/@vidividivici/context-reader-mac/: index.cjs  package.json  test.cjs
resources/native-sound-mixer/: package.json
resources/native/context-reader/: Cargo.toml
resources/native/context-reader/src/: lib.rs  main.rs
resources/native/context-reader/tests/: build.rs
resources/native/insert-bridge/: Cargo.toml
resources/native/insert-bridge/src/: main.rs
resources/uiohook-napi/: package.json
resources/uiohook-napi/prebuilds/darwin-arm64/: uiohook-napi.node
resources/uiohook-napi/prebuilds/win32-arm64/: uiohook-napi.node
resources/uiohook-napi/prebuilds/win32-x64/: uiohook-napi.node
src/: clippaste-manager.js  context.js  index.html  main.js  renderer-trigger.js  renderer.js  settings.js  setup.html  stt-engine.js  toast.html
tests/: test_workflow_validation.py
voiceappear-sourceFiles/resources/: app-update.yml
(+5 files in other folders)
