[package]
name = "context-reader"
version = "0.1.0"
edition = "2021"
authors = ["Ryder Bluhm"]
description = "Windows context reader for SmoothSTT - reads text at caret position"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.58", features = [
    "UI_UIAutomation",
    "UI_UIAutomation_Core",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
] }

[[bin]]
name = "context-reader"
path = "src/main.rs"
